--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     <p class="category-items_title">Women</p>
                                     <ul class="list_category">
                                        <li class="category_item"><a href="#">Dresses</a></li>
-                                       <li class="category_item"><a href="#">Tops</a></li>
+                                       <li class="category_item"><a href="single-page.html">Tops</a></li>
                                        <li class="category_item"><a href="#">Sweaters/Knits</a></li>
                                        <li class="category_item"><a href="#">Jackets/Coats</a></li>
                                        <li class="category_item"><a href="#">Blazers</a></li>
@@ -167,12 +167,10 @@
                            </div>
                            <i class="fas fa-times-circle"></i>
                         </div>
-                        <!-- Итоговая сумма -->
                         <div class="header__box-right-cart-wrapper-price">
                            <h3 class="header__cart-price-total">TOTAL</h3>
                            <h3 class="header__cart-price-sum">$500.00</h3>
                         </div>
-                        <!-- Проверка/Оплата -->
                         <div class="header__box-right-cart-wrapper-payment">
                            <p class="header__cart-payment-checkout"><a class="payment-checkout" href="#">Checkout</a>
                            </p>
@@ -202,34 +200,34 @@
                            <div class="header__nav-bottom-wrapper-title">Women
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list1">
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Sweaters/Knits</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Jackets/Coats</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Blazers</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Denim</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Leggings/Pants</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Skirts/Sorts</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Accessories</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="single-page.html">Tops</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Blazers</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Denim</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Leggings/Pants</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Skirts/Sorts</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Accessories</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box2">
                            <div class="header__nav-bottom-wrapper-title">Women
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list2">
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Sweaters/Knits</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Jackets/Coats</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box3">
                            <div class="header__nav-bottom-wrapper-title">Women
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list3">
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Sweaters/Knits</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box4">
