--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
                               </ul>
                            </div>
                         </div>
-                        <!-- Конец Меню при наведении  -->
                      </details>
 
 
@@ -258,9 +257,8 @@
          <div class="container">
             <div class="head-content">
                <div class="head-text">
-                  <h1 class="head_title">THE BRAND <br>
-                     <p class="head_text">OF LUXERIOUS <span>FASHION</span></p>
-                  </h1>
+                  <h1 class="head_title">THE BRAND </h1>
+                  <p class="head_text">OF LUXERIOUS <span>FASHION</span></p>
                </div>
             </div>
          </div>
@@ -272,8 +270,7 @@
 
       <div class="container">
 
-         <section class="category">
-
+         <div class="category">
             <div class="banner ban1">
                <img src="img/ban1.jpg" alt="for man">
                <p>hOT dEAL<br><span>FOR MEN</span></p>
@@ -291,7 +288,7 @@
                <p>new arrivals<br><span>FOR kids</span></p>
             </div>
 
-         </section>
+         </div>
 
          <section class="products">
             <h2 class="products-title">Fetured Items</h2>
@@ -465,9 +462,10 @@
       <section class="features">
          <div class="feature_img">
             <img src="img/feature.jpg" alt="feature">
-            <h3>30% <span>OFFER</span>
+            <div class="sale">
+               <h3>30% <span>OFFER</span> </h3>
                <p>FOR WOMEN</p>
-            </h3>
+            </div>
          </div>
          <div class="feature">
             <div class="feature-form">
@@ -599,7 +597,7 @@
          </section>
       </div>
 
-      <section class="copy_wrapper">
+      <div class="copy_wrapper">
          <div class="container">
             <div class="copyright">
                <div class="copyright_copy">
@@ -614,7 +612,7 @@
                </div>
             </div>
          </div>
-      </section>
+      </div>
    </footer>
 
 
