--- a/single-page.html
+++ b/single-page.html
@@ -264,8 +264,8 @@
             <h2 class="arrivals-header">New Arrivals </h2>
             <nav class="arrivals-breadcrumbs">
                <ul class="arrivals-list">
-                  <li><a class="arrivals-link" href="index.html">Home</a><span>&#47</span></li>
-                  <li><a class="arrivals-link" href="#">Men</a><span>&#47</span></li>
+                  <li><a class="arrivals-link" href="index.html">Home</a><span>&#47;</span></li>
+                  <li><a class="arrivals-link" href="#">Men</a><span>&#47;</span></li>
                   <li><a class="arrivals-link active_bc" href="#">New Arrivals</a></li>
                </ul>
             </nav>
@@ -337,7 +337,7 @@
                      </div>
                      <div class="filter-choose-quantity">
                         <h6 class="filter-choose_title">QUANTITY</h6>
-                        <input class="filter-choose-box" type="text" min="1" required name="quantity">
+                        <input class="filter-choose-box" type="number" min="1" required name="quantity">
                      </div>
                   </div>
                   <button class="filter-button">
@@ -350,7 +350,7 @@
                            </g>
                         </g>
                      </svg>
-                     <p class="filter-button-text">Add to Cart</p>
+                     <span class="filter-button-text">Add to Cart</span>
                   </button>
                </form>
 
@@ -540,7 +540,7 @@
          </section>
       </div>
 
-      <section class="copy_wrapper">
+      <div class="copy_wrapper">
          <div class="container">
             <div class="copyright">
                <div class="copyright_copy">
@@ -555,7 +555,7 @@
                </div>
             </div>
          </div>
-      </section>
+      </div>
    </footer>
 
 
