--- a/single-page.html
+++ b/single-page.html
@@ -368,7 +368,7 @@
                   <div><img src="img/singlepage/may-like1.png" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </div>
                   <div class="product_hover">
@@ -387,7 +387,7 @@
                      <img src="img/singlepage/may-like2.png" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </div>
 
@@ -406,7 +406,7 @@
                   <div><img src="img/singlepage/may-like3.png" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </div>
                   <div class="product_hover">
@@ -425,7 +425,7 @@
                      <img src="img/singlepage/may-like4.png" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </div>
                   <div class="product_hover">
