update complete index and single

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                      <h3>BRAN<span>D</span></h3>
                   </a>
                </div>
-               <div class="search"> 
+               <div class="search">
                   <div class="open-menu">
                      <details>
                         <summary>Browse</summary>
@@ -184,7 +184,6 @@
             </div>
 
          </div>
-         <hr>
       </div>
       <nav class="nav">
          <div class="container">
@@ -196,44 +195,42 @@
                   <div class="nav-bottom-wrapper-hover man-mm">
                      <div class="header__nav-bottom-wrapper">
                         <div class="header__nav-bottom-wrapper-box1">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Man
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list1">
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="single-page.html">Tops</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Blazers</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Denim</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Leggings/Pants</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Skirts/Sorts</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Pants</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sorts</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Accessories</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box2">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Man
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list2">
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Pants</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box3">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Man
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list3">
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Pants</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box4">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Man
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list4">
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Dresses</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="">Pants</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="">Tops</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="">Sweaters/Knits</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="">Jackets/Coats</a></li>
@@ -302,47 +299,40 @@
                   <div class="nav-bottom-wrapper-hover kids-mm">
                      <div class="header__nav-bottom-wrapper">
                         <div class="header__nav-bottom-wrapper-box1">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Kids
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list1">
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="single-page.html">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Blazers</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Denim</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Leggings/Pants</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Pants</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Skirts/Sorts</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Accessories</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box2">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Kids
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list2">
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box3">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Kids
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list3">
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box4">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Kids
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list4">
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Sweaters/Knits</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Jackets/Coats</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="">Sweaters</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="">Jackets</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-promo">
@@ -355,46 +345,34 @@
                   <div class="nav-bottom-wrapper-hover accoseriese-mm">
                      <div class="header__nav-bottom-wrapper">
                         <div class="header__nav-bottom-wrapper-box1">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Accoseriese
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list1">
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="single-page.html">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Blazers</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Denim</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Leggings/Pants</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Skirts/Sorts</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Accessories</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box2">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Accoseriese
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list2">
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box3">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Accoseriese
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list3">
-                              <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box4">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Accoseriese
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list4">
                               <li class="header__nav-bottom-wrapper-items"><a href="">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Tops</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="">Sweaters/Knits</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="">Jackets/Coats</a></li>
                            </ul>
                         </div>
@@ -408,11 +386,11 @@
                   <div class="nav-bottom-wrapper-hover featured-mm">
                      <div class="header__nav-bottom-wrapper">
                         <div class="header__nav-bottom-wrapper-box1">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Featured
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list1">
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="single-page.html">Tops</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Blazers</a></li>
@@ -423,7 +401,7 @@
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box2">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Featured
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list2">
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
@@ -433,7 +411,7 @@
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box3">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Featured
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list3">
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
@@ -442,7 +420,7 @@
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box4">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Featured
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list4">
                               <li class="header__nav-bottom-wrapper-items"><a href="">Dresses</a></li>
@@ -461,11 +439,11 @@
                   <div class="nav-bottom-wrapper-hover deals-mm">
                      <div class="header__nav-bottom-wrapper">
                         <div class="header__nav-bottom-wrapper-box1">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Hot Deals
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list1">
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
-                              <li class="header__nav-bottom-wrapper-items"><a href="single-page.html">Tops</a></li>
+                              <li class="header__nav-bottom-wrapper-items"><a href="#">Tops</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Sweaters/Knits</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Jackets/Coats</a></li>
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Blazers</a></li>
@@ -476,7 +454,7 @@
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box2">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Hot Deals
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list2">
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
@@ -486,7 +464,7 @@
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box3">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Hot Deals
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list3">
                               <li class="header__nav-bottom-wrapper-items"><a href="#">Dresses</a></li>
@@ -495,7 +473,7 @@
                            </ul>
                         </div>
                         <div class="header__nav-bottom-wrapper-box4">
-                           <div class="header__nav-bottom-wrapper-title">Women
+                           <div class="header__nav-bottom-wrapper-title">Hot Deals
                            </div>
                            <ul class="header__nav-bottom-wrapper-list header__nav-bottom-wrapper-list4">
                               <li class="header__nav-bottom-wrapper-items"><a href="">Dresses</a></li>
