--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
             <div class="left-part">
                <div class="shop-name">
-                  <a href="index.html"><img src="img/logo.png" alt="logo"></a>
                   <a href="index.html">
+                     <img src="img/logo.png" alt="logo">
                      <h3>BRAN<span>D</span></h3>
                   </a>
                </div>
@@ -678,7 +678,8 @@
                      <span>Add to Cart</span>
                   </a>
                </div>
-               <a class="more" href="#">Browse All Product<i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
+            <a class="more" href="product.html">Browse All Product<i class="fas fa-long-arrow-alt-right"></i></a>
          </section>
 
 
