add product page and update previous pages

--- a/single-page.html
+++ b/single-page.html
@@ -22,12 +22,10 @@
 
 
             <div class="left-part">
-               <div class="shop-name">
-                  <a href="index.html">
-                     <img src="img/logo.png" alt="logo">
-                     <h3>BRAN<span>D</span></h3>
-                  </a>
-               </div>
+               <a class="shop-name" href="index.html">
+                  <img src="img/logo.png" alt="logo">
+                  <h3>BRAN<span>D</span></h3>
+               </a>
                <div class="search">
                   <div class="open-menu">
                      <details>
@@ -187,9 +185,7 @@
       <nav class="nav">
          <div class="container">
             <ul class="nav-string">
-               <li class="home links"><a class="link" href="index.html"
-                     style="border-bottom: 3px solid #f16d7f;padding-bottom: 15px;">Home
-                  </a></li>
+               <li class="home links"><a class="link" href="index.html">Home</a></li>
                <li class="man links"><a class="link" href="#">Man</a>
                   <div class="nav-bottom-wrapper-hover man-mm">
                      <div class="header__nav-bottom-wrapper">
@@ -696,7 +692,7 @@
 
 
 
-   <section class="section_wrapper">
+   <div class="section_wrapper">
       <div class="section_subscribe">
          <div class="container">
             <div class="subscribe">
@@ -724,7 +720,7 @@
             </div>
          </div>
       </div>
-   </section>
+   </div>
 
    <footer class="footer">
 
