--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
 
 
             <div class="left-part">
-               <div class="shop-name">
-                  <a href="index.html">
-                     <img src="img/logo.png" alt="logo">
-                     <h3>BRAN<span>D</span></h3>
-                  </a>
-               </div>
+               <a class="shop-name" href="index.html">
+                  <img src="img/logo.png" alt="logo">
+                  <h3>BRAN<span>D</span></h3>
+               </a>
                <div class="search">
                   <div class="open-menu">
                      <details>
@@ -682,11 +680,7 @@
             <a class="more" href="product.html">Browse All Product<i class="fas fa-long-arrow-alt-right"></i></a>
          </section>
 
-
-
       </div>
-
-
 
    </main>
 
@@ -709,7 +703,7 @@
                      </g>
                   </g>
                </svg>
-               <div>
+               <div class="feature-form-text">
                   <h3>Free Delivery</h3>
                   <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
                      models. </p>
@@ -724,7 +718,7 @@
                      </g>
                   </g>
                </svg>
-               <div>
+               <div class="feature-form-text">
                   <h3>Sales & discounts</h3>
                   <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
                      models. </p>
@@ -739,7 +733,7 @@
                      </g>
                   </g>
                </svg>
-               <div>
+               <div class="feature-form-text">
                   <h3>Quality assurance</h3>
                   <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
                      models. </p>
@@ -750,7 +744,7 @@
       </section>
    </div>
 
-   <section class="section_wrapper">
+   <div class="section_wrapper">
       <div class="section_subscribe">
          <div class="container">
             <div class="subscribe">
@@ -778,7 +772,7 @@
             </div>
          </div>
       </div>
-   </section>
+   </div>
 
    <footer class="footer">
 
