--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                <li class="home links"><a class="link" href="index.html"
                      style="border-bottom: 3px solid #f16d7f;padding-bottom: 15px;">Home
                   </a></li>
-               <li class="man links"><a class="link" href="#">Man</a>
+               <li class="man links"><a class="link" href="product.html">Man</a>
                   <div class="nav-bottom-wrapper-hover man-mm">
                      <div class="header__nav-bottom-wrapper">
                         <div class="header__nav-bottom-wrapper-box1">
