--- a/product.html
+++ b/product.html
@@ -19,8 +19,6 @@
 
          <div class="first-line">
 
-
-
             <div class="left-part">
                <a class="shop-name" href="index.html">
                   <img src="img/logo.png" alt="logo">
@@ -186,7 +184,8 @@
          <div class="container">
             <ul class="nav-string">
                <li class="home links"><a class="link" href="index.html">Home</a></li>
-               <li class=" man links"><a class="link" href="#">Man</a>
+               <li class=" man links"><a class="link" href="product.html"
+                     style="border-bottom: 3px solid #f16d7f;padding-bottom: 15px;">Man</a>
                   <div class="nav-bottom-wrapper-hover man-mm">
                      <div class="header__nav-bottom-wrapper">
                         <div class="header__nav-bottom-wrapper-box1">
@@ -498,7 +497,7 @@
             <nav class="arrivals-breadcrumbs">
                <ul class="arrivals-list">
                   <li><a class="arrivals-link" href="index.html">Home</a><span>&#47;</span></li>
-                  <li><a class="arrivals-link" href="#">Men</a><span>&#47;</span></li>
+                  <li><a class="arrivals-link" href="product.html">Man</a><span>&#47;</span></li>
                   <li><a class="arrivals-link active_bc" href="#">New Arrivals</a></li>
                </ul>
             </nav>
