add new pages and updates priveous

--- a/index.html
+++ b/index.html
@@ -170,9 +170,10 @@
                            <h3 class="header__cart-price-sum">$500.00</h3>
                         </div>
                         <div class="header__box-right-cart-wrapper-payment">
-                           <p class="header__cart-payment-checkout"><a class="payment-checkout" href="#">Checkout</a>
+                           <p class="header__cart-payment-checkout"><a class="payment-checkout" href="checkout.html">Checkout</a>
                            </p>
-                           <p class="header__cart-payment-gotocart"><a class="payment-gotocart" href="#">Go to cart</a>
+                           <p class="header__cart-payment-gotocart"><a class="payment-gotocart"
+                                 href="shopping-cart.html">Go to cart</a>
                            </p>
                         </div>
                      </div>
@@ -537,7 +538,7 @@
                      <img src="img/one.jpg" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </a>
                   <a class="product_hover" href="#">
@@ -555,7 +556,7 @@
                      <img src="img/two.jpg" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </a>
                   <a class="product_hover" href="#">
@@ -568,13 +569,12 @@
                   </a>
                </div>
 
-
                <div class="product">
                   <a href="single-page.html">
                      <img src="img/three.jpg" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </a>
                   <a class="product_hover" href="#">
@@ -592,7 +592,7 @@
                      <img src="img/four.jpg" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </a>
                   <a class="product_hover" href="#">
@@ -610,7 +610,7 @@
                      <img src="img/five.jpg" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </a>
                   <a class="product_hover" href="#">
@@ -628,7 +628,7 @@
                      <img src="img/six.jpg" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </a>
                   <a class="product_hover" href="#">
@@ -646,7 +646,7 @@
                      <img src="img/seven.jpg" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </a>
                   <a class="product_hover" href="#">
@@ -664,7 +664,7 @@
                      <img src="img/eight.jpg" alt="">
                      <div class="product-info">
                         <h4>Mango People T-shirt</h4>
-                        <p class="product_price">$52.00</p>
+                        <p class="product_price stars">$52.00</p>
                      </div>
                   </a>
                   <a class="product_hover" href="#">
