--- a/checkout.html
+++ b/checkout.html
@@ -511,175 +511,17 @@
 
    </div>
 
-   <main class="body-singlepage">
+   <!-- Main part -->
 
-      <div class="slider">
-         <div class="slider-arrow left">
-            <i class="fas fa-chevron-left arrow"></i>
-         </div>
-         <div class="slider-content">
-            <img src="img/singlepage/slide1.png" alt="slide1">
-         </div>
-         <div class="slider-arrow right">
-            <i class="fas fa-chevron-right arrow"></i>
-         </div>
-      </div>
+   <main class="body-checkout">
 
       <div class="container">
-         <section class="product-desc">
-
-            <div class="product-desc-wrapper">
-               <div class="underline">
-                  <h3 class="product-desc-category">WOMEN COLLECTION</h3>
-                  <p class="product-desc-line"><span></span></p>
-                  <h2 class="product-desc-name">Moschino Cheap And Chic</h2>
-                  <p class="product-desc-description">Compellingly actualize fully researched processes before proactive
-                     outsourcing.
-                     Progressively syndicate collaborative architectures before cutting-edge services. Completely
-                     visualize
-                     parallel core competencies rather than exceptional portals. </p>
-                  <div class="product-desc-info">
-                     <h6 class="product-desc-info_material">MATERIAL:<span
-                           class="product-desc-info_material__type">COTTON</span>
-                     </h6>
-                     <h6 class="product-desc-info_designer">DESIGNER:<span
-                           class="product-desc-info_designer__name">BINBURHAN</span>
-                     </h6>
-                  </div>
-                  <div class="product-desc-price">$561</div>
-               </div>
-
-               <form action="#" class="filter">
-                  <div class="filter-wrapper">
-                     <div class="filter-choose-collor">
-                        <h6 class="filter-choose_title">CHOOSE COLOR</h6>
-                        <select class="filter-choose-box" form="#" name="collor">
-                           <option class="filter-choose-box-option red" value="red">Red</option>
-                           <option class="filter-choose-box-option" value="yellow">Yellow</option>
-                           <option class="filter-choose-box-option" value="green">Green</option>
-                           <option class="filter-choose-box-option" value="blue">Blue</option>
-                        </select>
-                     </div>
-                     <div class="filter-choose-size">
-                        <h6 class="filter-choose_title">CHOOSE SIZE</h6>
-                        <select class="filter-choose-box" form="#" name="size">
-                           <option class="filter-choose-box-option" value="xs">XS</option>
-                           <option class="filter-choose-box-option" value="s">S</option>
-                           <option class="filter-choose-box-option" value="m">M</option>
-                           <option class="filter-choose-box-option" value="l">L</option>
-                           <option class="filter-choose-box-option" value="xl">XL</option>
-                           <option class="filter-choose-box-option" value="xxl">XXL</option>
-                        </select>
-                     </div>
-                     <div class="filter-choose-quantity">
-                        <h6 class="filter-choose_title">QUANTITY</h6>
-                        <input class="filter-choose-box" type="number" min="1" required name="quantity">
-                     </div>
-                  </div>
-                  <button class="filter-button">
-                     <svg class="filter-button-cart" xmlns="http://www.w3.org/2000/svg" width="26" height="24"
-                        viewBox="0 0 26 24">
-                        <g>
-                           <g>
-                              <path fill="#ef5b70"
-                                 d="M0 .978C0 .44.433-.001.96-.001H4.44c.432 0 .817.294.93.718l3.926 14.445h10.707l3.558-8.315h-11.86a.973.973 0 0 1-.962-.978c0-.538.432-.978.961-.978h13.336a.95.95 0 0 1 .801.44c.177.277.209.62.08.93l-4.391 10.27a.963.963 0 0 1-.882.588H8.574a.964.964 0 0 1-.929-.717L3.718 1.956H.961A.973.973 0 0 1 0 .977zM5.48 21.782c0-1.223.978-2.217 2.18-2.217 1.202 0 2.18.995 2.18 2.217 0 1.223-.978 2.217-2.18 2.217-1.202 0-2.18-.994-2.18-2.217zm13.64.147c-.08-1.207.818-2.283 2.02-2.364 1.202-.082 2.244.847 2.324 2.054.032.603-.144 1.174-.529 1.614a2.162 2.162 0 0 1-1.49.766h-.16c-1.139 0-2.084-.913-2.165-2.07z" />
-                           </g>
-                        </g>
-                     </svg>
-                     <span class="filter-button-text">Add to Cart</span>
-                  </button>
-               </form>
-
-            </div>
 
 
 
-         </section>
-
-         <section class="products products--singlepage">
-            <h2 class="products-title products--singlepage_title">you may like also</h2>
-
-            <div class="products-carts">
-               <div class="product">
-                  <a href="single-page.html">
-                     <img src="img/singlepage/may-like1.png" alt="">
-                     <div class="product-info">
-                        <h4>Mango People T-shirt</h4>
-                        <p class="product_price stars">$52.00</p>
-                     </div>
-                  </a>
-                  <a class="product_hover" href="#">
-                     <svg width="23" height="22" viewBox="0 0 33 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                           d="M27.199 29C26.5512 28.9738 25.9396 28.6948 25.4952 28.2227C25.0509 27.7506 24.8094 27.1232 24.8225 26.475C24.8356 25.8269 25.1023 25.2097 25.5653 24.7559C26.0283 24.3022 26.6508 24.048 27.2991 24.048C27.9474 24.048 28.5697 24.3022 29.0327 24.7559C29.4957 25.2097 29.7624 25.8269 29.7755 26.475C29.7886 27.1232 29.5471 27.7506 29.1028 28.2227C28.6585 28.6948 28.0468 28.9738 27.399 29H27.199ZM7.75098 26.32C7.75098 25.79 7.90815 25.2718 8.20264 24.8311C8.49712 24.3904 8.91569 24.0469 9.4054 23.844C9.8951 23.6412 10.434 23.5881 10.9539 23.6915C11.4737 23.7949 11.9512 24.0502 12.326 24.425C12.7009 24.7998 12.9562 25.2773 13.0596 25.7972C13.163 26.317 13.1098 26.8559 12.907 27.3456C12.7041 27.8353 12.3606 28.2539 11.9199 28.5483C11.4792 28.8428 10.9611 29 10.431 29C10.0789 29.0003 9.73017 28.9311 9.40479 28.7966C9.0794 28.662 8.78374 28.4646 8.53467 28.2158C8.28559 27.9669 8.08805 27.6713 7.95325 27.3461C7.81844 27.0208 7.74902 26.6721 7.74902 26.32H7.75098ZM11.551 20.686C11.2916 20.6868 11.039 20.6024 10.8322 20.4457C10.6253 20.2891 10.4756 20.0689 10.406 19.819L5.573 2.36401H2.18005C1.86657 2.36401 1.56591 2.23947 1.34424 2.01781C1.12257 1.79614 0.998047 1.49549 0.998047 1.18201C0.998047 0.868519 1.12257 0.567873 1.34424 0.346205C1.56591 0.124537 1.86657 5.81268e-06 2.18005 5.81268e-06H6.46106C6.72055 -0.00080736 6.97309 0.0837201 7.17981 0.240568C7.38653 0.397416 7.53589 0.617884 7.60498 0.868006L12.438 18.323H25.616L29.999 8.27501H15.399C15.2409 8.27961 15.0834 8.25242 14.9359 8.19507C14.7884 8.13771 14.6539 8.05134 14.5404 7.94108C14.4269 7.83082 14.3366 7.69891 14.275 7.55315C14.2134 7.40739 14.1816 7.25075 14.1816 7.0925C14.1816 6.93426 14.2134 6.77762 14.275 6.63186C14.3366 6.4861 14.4269 6.35419 14.5404 6.24393C14.6539 6.13367 14.7884 6.0473 14.9359 5.98994C15.0834 5.93259 15.2409 5.90541 15.399 5.91001H31.812C32.0077 5.90996 32.2003 5.95866 32.3724 6.05172C32.5446 6.14478 32.6908 6.27926 32.798 6.44301C32.9058 6.60729 32.9714 6.79569 32.9889 6.99145C33.0063 7.18721 32.9752 7.38424 32.8981 7.565L27.493 19.977C27.4007 20.1876 27.249 20.3668 27.0565 20.4927C26.864 20.6186 26.6391 20.6858 26.4091 20.686H11.551Z"
-                           fill="#E8E8E8" />
-                     </svg>
-                     <span>Add to Cart</span>
-                  </a>
-               </div>
-
-               <div class="product">
-                  <a href="single-page.html">
-                     <img src="img/singlepage/may-like2.png" alt="">
-                     <div class="product-info">
-                        <h4>Mango People T-shirt</h4>
-                        <p class="product_price stars">$52.00</p>
-                     </div>
-                  </a>
-                  <a class="product_hover" href="#">
-                     <svg width="23" height="22" viewBox="0 0 33 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                           d="M27.199 29C26.5512 28.9738 25.9396 28.6948 25.4952 28.2227C25.0509 27.7506 24.8094 27.1232 24.8225 26.475C24.8356 25.8269 25.1023 25.2097 25.5653 24.7559C26.0283 24.3022 26.6508 24.048 27.2991 24.048C27.9474 24.048 28.5697 24.3022 29.0327 24.7559C29.4957 25.2097 29.7624 25.8269 29.7755 26.475C29.7886 27.1232 29.5471 27.7506 29.1028 28.2227C28.6585 28.6948 28.0468 28.9738 27.399 29H27.199ZM7.75098 26.32C7.75098 25.79 7.90815 25.2718 8.20264 24.8311C8.49712 24.3904 8.91569 24.0469 9.4054 23.844C9.8951 23.6412 10.434 23.5881 10.9539 23.6915C11.4737 23.7949 11.9512 24.0502 12.326 24.425C12.7009 24.7998 12.9562 25.2773 13.0596 25.7972C13.163 26.317 13.1098 26.8559 12.907 27.3456C12.7041 27.8353 12.3606 28.2539 11.9199 28.5483C11.4792 28.8428 10.9611 29 10.431 29C10.0789 29.0003 9.73017 28.9311 9.40479 28.7966C9.0794 28.662 8.78374 28.4646 8.53467 28.2158C8.28559 27.9669 8.08805 27.6713 7.95325 27.3461C7.81844 27.0208 7.74902 26.6721 7.74902 26.32H7.75098ZM11.551 20.686C11.2916 20.6868 11.039 20.6024 10.8322 20.4457C10.6253 20.2891 10.4756 20.0689 10.406 19.819L5.573 2.36401H2.18005C1.86657 2.36401 1.56591 2.23947 1.34424 2.01781C1.12257 1.79614 0.998047 1.49549 0.998047 1.18201C0.998047 0.868519 1.12257 0.567873 1.34424 0.346205C1.56591 0.124537 1.86657 5.81268e-06 2.18005 5.81268e-06H6.46106C6.72055 -0.00080736 6.97309 0.0837201 7.17981 0.240568C7.38653 0.397416 7.53589 0.617884 7.60498 0.868006L12.438 18.323H25.616L29.999 8.27501H15.399C15.2409 8.27961 15.0834 8.25242 14.9359 8.19507C14.7884 8.13771 14.6539 8.05134 14.5404 7.94108C14.4269 7.83082 14.3366 7.69891 14.275 7.55315C14.2134 7.40739 14.1816 7.25075 14.1816 7.0925C14.1816 6.93426 14.2134 6.77762 14.275 6.63186C14.3366 6.4861 14.4269 6.35419 14.5404 6.24393C14.6539 6.13367 14.7884 6.0473 14.9359 5.98994C15.0834 5.93259 15.2409 5.90541 15.399 5.91001H31.812C32.0077 5.90996 32.2003 5.95866 32.3724 6.05172C32.5446 6.14478 32.6908 6.27926 32.798 6.44301C32.9058 6.60729 32.9714 6.79569 32.9889 6.99145C33.0063 7.18721 32.9752 7.38424 32.8981 7.565L27.493 19.977C27.4007 20.1876 27.249 20.3668 27.0565 20.4927C26.864 20.6186 26.6391 20.6858 26.4091 20.686H11.551Z"
-                           fill="#E8E8E8" />
-                     </svg>
-                     <span>Add to Cart</span>
-                  </a>
-               </div>
-
-               <div class="product">
-                  <a href="single-page.html">
-                     <img src="img/singlepage/may-like3.png" alt="">
-                     <div class="product-info">
-                        <h4>Mango People T-shirt</h4>
-                        <p class="product_price stars">$52.00</p>
-                     </div>
-                  </a>
-                  <a class="product_hover" href="#">
-                     <svg width="23" height="22" viewBox="0 0 33 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                           d="M27.199 29C26.5512 28.9738 25.9396 28.6948 25.4952 28.2227C25.0509 27.7506 24.8094 27.1232 24.8225 26.475C24.8356 25.8269 25.1023 25.2097 25.5653 24.7559C26.0283 24.3022 26.6508 24.048 27.2991 24.048C27.9474 24.048 28.5697 24.3022 29.0327 24.7559C29.4957 25.2097 29.7624 25.8269 29.7755 26.475C29.7886 27.1232 29.5471 27.7506 29.1028 28.2227C28.6585 28.6948 28.0468 28.9738 27.399 29H27.199ZM7.75098 26.32C7.75098 25.79 7.90815 25.2718 8.20264 24.8311C8.49712 24.3904 8.91569 24.0469 9.4054 23.844C9.8951 23.6412 10.434 23.5881 10.9539 23.6915C11.4737 23.7949 11.9512 24.0502 12.326 24.425C12.7009 24.7998 12.9562 25.2773 13.0596 25.7972C13.163 26.317 13.1098 26.8559 12.907 27.3456C12.7041 27.8353 12.3606 28.2539 11.9199 28.5483C11.4792 28.8428 10.9611 29 10.431 29C10.0789 29.0003 9.73017 28.9311 9.40479 28.7966C9.0794 28.662 8.78374 28.4646 8.53467 28.2158C8.28559 27.9669 8.08805 27.6713 7.95325 27.3461C7.81844 27.0208 7.74902 26.6721 7.74902 26.32H7.75098ZM11.551 20.686C11.2916 20.6868 11.039 20.6024 10.8322 20.4457C10.6253 20.2891 10.4756 20.0689 10.406 19.819L5.573 2.36401H2.18005C1.86657 2.36401 1.56591 2.23947 1.34424 2.01781C1.12257 1.79614 0.998047 1.49549 0.998047 1.18201C0.998047 0.868519 1.12257 0.567873 1.34424 0.346205C1.56591 0.124537 1.86657 5.81268e-06 2.18005 5.81268e-06H6.46106C6.72055 -0.00080736 6.97309 0.0837201 7.17981 0.240568C7.38653 0.397416 7.53589 0.617884 7.60498 0.868006L12.438 18.323H25.616L29.999 8.27501H15.399C15.2409 8.27961 15.0834 8.25242 14.9359 8.19507C14.7884 8.13771 14.6539 8.05134 14.5404 7.94108C14.4269 7.83082 14.3366 7.69891 14.275 7.55315C14.2134 7.40739 14.1816 7.25075 14.1816 7.0925C14.1816 6.93426 14.2134 6.77762 14.275 6.63186C14.3366 6.4861 14.4269 6.35419 14.5404 6.24393C14.6539 6.13367 14.7884 6.0473 14.9359 5.98994C15.0834 5.93259 15.2409 5.90541 15.399 5.91001H31.812C32.0077 5.90996 32.2003 5.95866 32.3724 6.05172C32.5446 6.14478 32.6908 6.27926 32.798 6.44301C32.9058 6.60729 32.9714 6.79569 32.9889 6.99145C33.0063 7.18721 32.9752 7.38424 32.8981 7.565L27.493 19.977C27.4007 20.1876 27.249 20.3668 27.0565 20.4927C26.864 20.6186 26.6391 20.6858 26.4091 20.686H11.551Z"
-                           fill="#E8E8E8" />
-                     </svg>
-                     <span>Add to Cart</span>
-                  </a>
-               </div>
-
-               <div class="product">
-                  <a href="single-page.html">
-                     <img src="img/singlepage/may-like4.png" alt="">
-                     <div class="product-info">
-                        <h4>Mango People T-shirt</h4>
-                        <p class="product_price stars">$52.00</p>
-                     </div>
-                  </a>
-                  <a class="product_hover" href="#">
-                     <svg width="23" height="22" viewBox="0 0 33 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                           d="M27.199 29C26.5512 28.9738 25.9396 28.6948 25.4952 28.2227C25.0509 27.7506 24.8094 27.1232 24.8225 26.475C24.8356 25.8269 25.1023 25.2097 25.5653 24.7559C26.0283 24.3022 26.6508 24.048 27.2991 24.048C27.9474 24.048 28.5697 24.3022 29.0327 24.7559C29.4957 25.2097 29.7624 25.8269 29.7755 26.475C29.7886 27.1232 29.5471 27.7506 29.1028 28.2227C28.6585 28.6948 28.0468 28.9738 27.399 29H27.199ZM7.75098 26.32C7.75098 25.79 7.90815 25.2718 8.20264 24.8311C8.49712 24.3904 8.91569 24.0469 9.4054 23.844C9.8951 23.6412 10.434 23.5881 10.9539 23.6915C11.4737 23.7949 11.9512 24.0502 12.326 24.425C12.7009 24.7998 12.9562 25.2773 13.0596 25.7972C13.163 26.317 13.1098 26.8559 12.907 27.3456C12.7041 27.8353 12.3606 28.2539 11.9199 28.5483C11.4792 28.8428 10.9611 29 10.431 29C10.0789 29.0003 9.73017 28.9311 9.40479 28.7966C9.0794 28.662 8.78374 28.4646 8.53467 28.2158C8.28559 27.9669 8.08805 27.6713 7.95325 27.3461C7.81844 27.0208 7.74902 26.6721 7.74902 26.32H7.75098ZM11.551 20.686C11.2916 20.6868 11.039 20.6024 10.8322 20.4457C10.6253 20.2891 10.4756 20.0689 10.406 19.819L5.573 2.36401H2.18005C1.86657 2.36401 1.56591 2.23947 1.34424 2.01781C1.12257 1.79614 0.998047 1.49549 0.998047 1.18201C0.998047 0.868519 1.12257 0.567873 1.34424 0.346205C1.56591 0.124537 1.86657 5.81268e-06 2.18005 5.81268e-06H6.46106C6.72055 -0.00080736 6.97309 0.0837201 7.17981 0.240568C7.38653 0.397416 7.53589 0.617884 7.60498 0.868006L12.438 18.323H25.616L29.999 8.27501H15.399C15.2409 8.27961 15.0834 8.25242 14.9359 8.19507C14.7884 8.13771 14.6539 8.05134 14.5404 7.94108C14.4269 7.83082 14.3366 7.69891 14.275 7.55315C14.2134 7.40739 14.1816 7.25075 14.1816 7.0925C14.1816 6.93426 14.2134 6.77762 14.275 6.63186C14.3366 6.4861 14.4269 6.35419 14.5404 6.24393C14.6539 6.13367 14.7884 6.0473 14.9359 5.98994C15.0834 5.93259 15.2409 5.90541 15.399 5.91001H31.812C32.0077 5.90996 32.2003 5.95866 32.3724 6.05172C32.5446 6.14478 32.6908 6.27926 32.798 6.44301C32.9058 6.60729 32.9714 6.79569 32.9889 6.99145C33.0063 7.18721 32.9752 7.38424 32.8981 7.565L27.493 19.977C27.4007 20.1876 27.249 20.3668 27.0565 20.4927C26.864 20.6186 26.6391 20.6858 26.4091 20.686H11.551Z"
-                           fill="#E8E8E8" />
-                     </svg>
-                     <span>Add to Cart</span>
-                  </a>
-               </div>
-            </div>
       </div>
-      </section>
-      </div>
-
-
 
    </main>
-
 
    <div class="section_wrapper">
       <div class="section_subscribe">
